<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">APCremote</string>
    
    <string name="settings">Connection settings</string>
    <string name="hostname">hostname</string>
    <string name="port">port</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="connect">connect</string>
    <string name="send">send</string>
    <string name="disconnect">disconnect</string>
    <string name="hintmessage">Type your message here</string>
    <string name="autoConnect">Auto connect</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    
    
</resources>
