<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<EditText android:id="@+id/hostnameInput"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/hostname"></EditText>
		<EditText android:id="@+id/portInput" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:hint="@string/port"
			android:inputType="number"></EditText>
		<EditText android:id="@+id/loginInput" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:hint="@string/login"></EditText>
		<EditText android:id="@+id/passwordInput"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/password" android:password="true"
			android:inputType="textPassword"></EditText>

		<CheckBox android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/autoConnectCheckbox"
			android:text="@string/autoConnect"></CheckBox>
	</LinearLayout>
</ScrollView>